--- a/sv-tora/resources/css/components/login-registration-form.css
+++ b/sv-tora/resources/css/components/login-registration-form.css
@@ -33,7 +33,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.25);
     transition: 0.5s ease;
 }
 
@@ -45,8 +45,13 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.25);
     transition: 0.5s ease;
+}
+
+.darkmode .login-container:before,
+.darkmode .registration-container:before {
+    background-color: rgba(35, 35, 35, 0.25);
 }
 
 .login-container:hover:before,
