--- a/sv-tora/resources/css/general-style.css
+++ b/sv-tora/resources/css/general-style.css
@@ -17,13 +17,13 @@ body {
     --theme-color-2-light: #FFFFFF;
     --theme-color-3-light: #C8C8C8;
     --theme-color-4-light: #9D9D9D;
-    --theme-color-5-light: #4D4D4D;
+    --theme-color-5-light: #7b7b7b;
 
-    --theme-color-1-dark: #171717;
-    --theme-color-2-dark: #222222;
-    --theme-color-3-dark: #303030;
-    --theme-color-4-dark: #4a4a4a;
-    --theme-color-5-dark: #9b9b9b;
+    --theme-color-1-dark: #232323;
+    --theme-color-2-dark: #414141;
+    --theme-color-3-dark: #545454;
+    --theme-color-4-dark: #6d6d6d;
+    --theme-color-5-dark: #9e9e9e;
 
     --theme-color-1: var(--theme-color-1-light);
     --theme-color-2: var(--theme-color-2-light);
@@ -35,7 +35,7 @@ body {
     --disabled-dark: #727272;
 
     --placeholder-color: #6B6B6B;
-    --text-color: #171717;
+    --text-color: #232323;
     --disabled-text-color: #8D8D8D;
 
     --text-shadow: #616161;
@@ -69,6 +69,7 @@ body.darkmode {
 
     --placeholder-color: #B4B4B4;
     --text-color: white;
+    --disabled-text-color: #797979;
 
     --text-shadow: black;
     --box-shadow: black;
@@ -112,7 +113,7 @@ body:before {
     background-position: center;
     background-repeat: repeat;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.2;
 }
 
 body.darkmode:before {
@@ -232,7 +233,7 @@ table, .table, th, td {
 
 @keyframes color-blink {
     from {
-        color: white;
+        color: var(--text-color);
     }
     to {
         color: var(--accent-color-1-light);
