--- a/sv-tora/public/css/sites/dashboard.css
+++ b/sv-tora/public/css/sites/dashboard.css
@@ -51,8 +51,7 @@ h1.greeting.greet {
     margin-bottom: 2rem;
 }
 
-.tournaments,
-div.no-tournament {
+.tournaments {
     text-align: center;
     position: relative;
     display: inline-block;
@@ -109,67 +108,36 @@ div.no-tournament {
     position: relative;
     text-align: left;
     padding-left: 3rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-style: italic;
-    margin: 1rem 0;
+    margin: 2rem 0;
     z-index: 1;
 }
 
-.tournaments.no-tournament h3 {
+.tournaments .info {
     position: absolute;
-    display: inline-block;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--accent-color-1-dark);
-    margin: 0 auto;
-    transition: 0.5s ease;
-    font-weight: bold;
-    text-shadow: 2px 2px 5px var(--text-shadow);
-    padding-left: 0;
-    font-size: 2.5rem;
-}
-
-.tournaments span {
-    position: absolute;
-    display: inline-block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--accent-color-1-dark);
-    font-size: 3.5rem;
-    margin: 0 auto;
-    transition: 0.5s ease;
-    font-weight: bold;
-    text-shadow: 2px 2px 5px var(--text-shadow);
-}
-
-.tournaments:hover span,
-.tournaments.no-tournament:hover h3 {
-    color: var(--accent-color-1-light);
-    text-shadow: 3px 3px 10px var(--text-shadow);
-    transform: translate(-50%, -50%) scale(1.1);
+    width: 100%;
+    bottom: 0;
 }
 
 .tournaments p {
-    position: absolute;
+    position: relative;
     width: 100%;
     font-size: 1.25rem;
     text-align: center;
+    margin: 1rem 0;
     bottom: 1rem;
 }
 
-div.no-tournament {
-    color: var(--theme-color-5);
-    background-color: var(--theme-color-3);
+.tournaments p span {
+    color: var(--accent-color-1-dark);
+    transition: 0.2s ease;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
-div.no-tournament h3 {
-    font-size: 2rem;
-}
-
-div.no-tournament p {
-    font-size: 1.25rem;
+.tournaments:hover p span {
+    color: var(--accent-color-1-light);
 }
 
 .actions {
