--- a/sv-tora/public/css/sites/tournament-overview.css
+++ b/sv-tora/public/css/sites/tournament-overview.css
@@ -189,6 +189,7 @@ h2 {
     color: var(--accent-color-1-dark);
     font-weight: bold;
     text-align: right;
+    font-size: 1.2em;
 }
 
 @media only screen and (min-width: 600px) {
